# ashlr-hub

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACT-H2.md  CONTRACT-M11.md  CONTRACT-M15.md  CONTRACT-M16.md  CONTRACT-M17.md  CONTRACT-M19.md  CONTRACT-M22.md  CONTRACT-M23.md  CONTRACT-M28.md  CONTRACT-M29.md  CONTRACT-M4.md  CONTRACT-M5.md  CONTRACT-M7.md  CONTRACT.md  CONTRIBUTING.md  DESKTOP.md  LICENSE  README.md  SECURITY.md  ashlr.verify.json  ashlr_autonomous_fleet_audit.md  ashlr_hub_functionality_report.md  eslint.config.js  install.sh  notes.md  package-lock.json  package.json  task_plan.md  tsconfig.json  vitest.config.ts
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: PLACEHOLDER.md
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: PLACEHOLDER.md  generate-icons.sh
desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  COMMAND-CENTER.md  DIAGNOSIS-MERGE-DRAIN.md  ECOSYSTEM-MAP.md  EFFICIENCY-ROADMAP.md  FOUNDRY-CONFIG.md  IMPROVEMENT-BACKLOG.md  LOCAL-PROVIDER-PICKER.md  MILESTONE-CONTRACT.md  NORTH-STAR.md  PLAN-COMMAND-HELP.md  PLUGIN-LEVERAGE-PLAN.md  PLUGINS.md  PULSE-BRIDGE.md  QUICKSTART.md  RELEASING.md  RELIABILITY.md  REVIEW-FINDINGS.md  ROADMAP-NEXT.md  ROADMAP.md  SEAMS.md  SPEC-DATA-ACQUISITION.md  SPEC-DEBT-REARGUARD.md  SPEC-ELITE-ENGINE-UTILIZATION.md  SPEC-ELON-DIRECTOR.md  SPEC-INFERENCE-FABRIC.md  SPEC-RESOURCE-CONTROL-PLANE.md  SPEC-V3-TEAM.md  (+9 more)
(+1128 files in other folders)
