[package]
name = "ashlr-desktop"
version = "0.1.0"
description = "Ashlr Mission Control — desktop wrapper"
authors = ["Mason Wyatt <mason@evero-consulting.com>"]
license = "MIT"
repository = "https://github.com/your-org/ashlr-hub"
edition = "2021"
rust-version = "1.77"

# Suppress Tauri's default binary name so we can use our own.
[[bin]]
name = "ashlr-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-png",
] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Produce a smaller binary: strip debug info, enable LTO, single codegen unit.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
